--- a/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
@@ -7,15 +7,9 @@ spring:
     nacos:
       discovery:
         server-addr: 30.16.95.140:8848
-        group: 85ab69de-640b-4bb6-b62e-59d4bbcd7d93
+        namespace: 7bdad1e8-52f0-4905-814a-d413d6d819e5
       username: nacos
       password: nacos
-#  datasource:
-#    druid:
-#      driver-class-name: com.mysql.cj.jdbc.Driver
-#      url: jdbc:mysql://30.16.95.144/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
-#      username: root
-#      password: root
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
