--- a/haohuo-service/haohuo-service-game/pom.xml
+++ b/haohuo-service/haohuo-service-game/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <parent>
