--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>3.15.6</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
