--- a/haohuo-service/haohuo-service-order/pom.xml
+++ b/haohuo-service/haohuo-service-order/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>spring-cloud-loadbalancer</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.110.ALL</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.20</version>
+        </dependency>
     </dependencies>
 
 </project>
