--- a/haohuo-service/haohuo-service-order/pom.xml
+++ b/haohuo-service/haohuo-service-order/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
