--- a/haohuo-service/haohuo-service-user/pom.xml
+++ b/haohuo-service/haohuo-service-user/pom.xml
@@ -41,8 +41,16 @@
 
         <dependency>
             <groupId>com.ebanma.cloud</groupId>
-            <artifactId>haohuo-service-api</artifactId>
+            <artifactId>haohuo-service-trans-api</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
     </dependencies>
 
