--- a/haohuo-service/pom.xml
+++ b/haohuo-service/pom.xml
@@ -50,10 +50,18 @@
         </dependency>
 
 
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.ebanma.cloud</groupId>
             <artifactId>haohuo-service-mall-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-trans-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
