--- a/haohuo-service/haohuo-service-seckill/pom.xml
+++ b/haohuo-service/haohuo-service-seckill/pom.xml
@@ -49,6 +49,11 @@
             <version>1.7.21</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.66</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
@@ -57,6 +62,11 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.0.4</version>
         </dependency>
     </dependencies>
     <parent>
@@ -67,13 +77,6 @@
 
     <artifactId>haohuo-service-seckill</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.0.4</version>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
