--- a/haohuo-service-api/haohuo-service-game-api/pom.xml
+++ b/haohuo-service-api/haohuo-service-game-api/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>haohuo-service-game-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
