--- a/haohuo-service/haohuo-service-game/pom.xml
+++ b/haohuo-service/haohuo-service-game/pom.xml
@@ -20,6 +20,11 @@
             <version>1.4.1</version>
         </dependency>
         <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-trans-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.4</version>
