--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -17,43 +17,43 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].order=1
-spring.cloud.gateway.routes[0].predicates[0]=Path=/user-service/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
 
 # 首页接口的路由配置
 spring.cloud.gateway.routes[1].id=trans-service
 spring.cloud.gateway.routes[1].uri=lb://trans-service
 spring.cloud.gateway.routes[1].order=1
-spring.cloud.gateway.routes[1].predicates[0]=Path=/trans-service/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/trans/**
 
 # 分类接口的路由配置
 spring.cloud.gateway.routes[2].id=seckill-service
 spring.cloud.gateway.routes[2].uri=lb://seckill-service
 spring.cloud.gateway.routes[2].order=1
-spring.cloud.gateway.routes[2].predicates[0]=Path=/seckill-service/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/seckill/**
 
 # 商品接口的路由配置
 spring.cloud.gateway.routes[3].id=post-service
 spring.cloud.gateway.routes[3].uri=lb://post-service
 spring.cloud.gateway.routes[3].order=1
-spring.cloud.gateway.routes[3].predicates[0]=Path=/post-service/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/post/**
 
 # 购物车接口的路由配置
 spring.cloud.gateway.routes[4].id=order-service
 spring.cloud.gateway.routes[4].uri=lb://order-service
 spring.cloud.gateway.routes[4].order=1
-spring.cloud.gateway.routes[4].predicates[0]=Path=/order-service/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/order/**
 
 # 订单接口的路由配置
 spring.cloud.gateway.routes[5].id=game-service
 spring.cloud.gateway.routes[5].uri=lb://game-service
 spring.cloud.gateway.routes[5].order=1
-spring.cloud.gateway.routes[5].predicates[0]=Path=/game-service/**
+spring.cloud.gateway.routes[5].predicates[0]=Path=/game/**
 
 # 收货地址接口的路由配置
 spring.cloud.gateway.routes[6].id=common-file-service
 spring.cloud.gateway.routes[6].uri=lb://common-file
 spring.cloud.gateway.routes[6].order=1
-spring.cloud.gateway.routes[6].predicates[0]=Path=/common-file/**
+spring.cloud.gateway.routes[6].predicates[0]=Path=/common/**
 
 # 商品服务Swagger的路由配置
 spring.cloud.gateway.routes[7].id=goods-service-swagger-route
