--- a/haohuo-service/haohuo-service-user/pom.xml
+++ b/haohuo-service/haohuo-service-user/pom.xml
@@ -40,9 +40,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.ebanma.cloud</groupId>
-            <artifactId>haohuo-service-trans-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -51,6 +50,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-trans-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
