--- a/haohuo-service/haohuo-service-order/pom.xml
+++ b/haohuo-service/haohuo-service-order/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>haohuo-service-user-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-mall-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
