--- a/haohuo-service/haohuo-service-seckill/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-seckill/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       password: nacos
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seckill
+    url: jdbc:mysql://30.16.95.143:3306/banma_project?useSSL=false&useUnicode=true&cahracterEncoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: root
 mybatis:
