--- a/haohuo-service/haohuo-service-trans/pom.xml
+++ b/haohuo-service/haohuo-service-trans/pom.xml
@@ -22,11 +22,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>2.3.2.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.projectlombok</groupId>-->
+<!--            <artifactId>lombok</artifactId>-->
+<!--            <version>1.18.20</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
