--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -19,6 +19,20 @@ spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].order=1
 spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
 
+spring.cloud.gateway.routes[19].id=user-service1
+spring.cloud.gateway.routes[19].uri=lb://user-service
+spring.cloud.gateway.routes[19].order=1
+spring.cloud.gateway.routes[19].predicates[0]=Path=/address/**
+
+spring.cloud.gateway.routes[20].id=user-service2
+spring.cloud.gateway.routes[20].uri=lb://user-service
+spring.cloud.gateway.routes[20].order=1
+spring.cloud.gateway.routes[20].predicates[0]=Path=/userInfo/**
+
+spring.cloud.gateway.routes[21].id=trans-service1
+spring.cloud.gateway.routes[21].uri=lb://trans-service
+spring.cloud.gateway.routes[21].order=1
+spring.cloud.gateway.routes[21].predicates[0]=Path=/red/**
 # 首页接口的路由配置
 spring.cloud.gateway.routes[1].id=trans-service
 spring.cloud.gateway.routes[1].uri=lb://trans-service
@@ -56,10 +70,10 @@ spring.cloud.gateway.routes[6].order=1
 spring.cloud.gateway.routes[6].predicates[0]=Path=/common/**
 
 # 商品接口的路由配置
-#spring.cloud.gateway.routes[23].id=mall-servicex
-#spring.cloud.gateway.routes[23].uri=lb://mall-service
-#spring.cloud.gateway.routes[23].order=1
-#spring.cloud.gateway.routes[23].predicates[0]=Path=/product/**
+spring.cloud.gateway.routes[18].id=mall-servicex
+spring.cloud.gateway.routes[18].uri=lb://mall-service
+spring.cloud.gateway.routes[18].order=1
+spring.cloud.gateway.routes[18].predicates[0]=Path=/product/**
 
 spring.cloud.gateway.routes[12].id=mall-servicex12
 spring.cloud.gateway.routes[12].uri=lb://mall-service
@@ -129,7 +143,7 @@ spring.cloud.gateway.routes[11].filters[0]=StripPrefix=2
 
 ##Redis 配置
 # Redis数据库索引（默认为0）
-spring.redis.database=0
+spring.redis.database=1
 # Redis服务器地址
 spring.redis.host=30.16.95.140
 # Redis服务器连接端口
