--- a/haohuo-service/haohuo-service-seckill/src/main/resources/application.properties
+++ b/haohuo-service/haohuo-service-seckill/src/main/resources/application.properties
@@ -64,9 +64,9 @@ spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=5000
 
-#最大连接数
-server.tomcat.max-connections=2000
-#最大线程数
-server.tomcat.max-threads=1000
-#最大等待数
-server.tomcat.accept-count=800
+##最大连接数
+#server.tomcat.max-connections=2000
+##最大线程数
+#server.tomcat.max-threads=1000
+##最大等待数
+#server.tomcat.accept-count=800
