--- a/haohuo-service/haohuo-service-post/pom.xml
+++ b/haohuo-service/haohuo-service-post/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-user-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
