--- a/haohuo-service/haohuo-service-post/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-post/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       #注册中心
       discovery:
         server-addr: http://30.16.95.140:8848
-        group: 7bdad1e8-52f0-4905-814a-d413d6d819e5
+        namespace: 9977e1bd-4be2-4c34-9a04-c291be3ff606
       #配置中心
       config:
         server-addr: http://30.16.95.140:8848
